# sweatstack-mcp

./: .env.example  .gitignore  Makefile  README.md  llm-tools-mcp-config.json  pyproject.toml  test_local.py
src/sweatstack_mcp/: app.py  server.py
